# CloudComputingHW

./: .gitignore  README.md
CloudHW1/: Server.py  index.html
CloudHW2/: CloudHW2.postman_collection.json  api.py  gol.db
CloudHW4/: Homework3.sln  Homework4.postman_collection.json
CloudHW4/Homework3/: Homework3.csproj  Program.cs  TextKeyPhrases.cs  Translate.cs  appsettings.json
CloudHW4/Homework3/Controllers/: FileController.cs
CloudHW4/Homework3/Properties/: launchSettings.json
CloudHW4/Homework3/wwwroot/: add.html  index.html  last.html  query.html
Proiect/CollectMe/: CollectMe.sln
Proiect/CollectMe/CollectMe/: CollectMe.csproj  Main.Designer.cs  Main.cs  Program.cs  UserInfo.Designer.cs  UserInfo.cs
Proiect/CollectMe/CollectMe/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Proiect/collect_me/: Cargo.toml
Proiect/collect_me/database/: create.sql
Proiect/collect_me/src/: database.rs  main.rs
