[package]
name = "collect_me"
version = "0.1.0"
authors = ["Andrei Damian <andreidaamian@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"

serenity = { git = "https://github.com/Lakelezz/serenity", rev = "a2e8cdedd0a42e31f83c668a80aa3a39ae0a37f3" }
tokio = { version = "0.2.11", features = ["macros", "rt-core"] }
tokio-postgres = "0.5.3"
postgres-types = "0.1.1"
postgres-derive = "0.4.0"
warp = "0.2.3"

serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.53"
toml = "0.5.6"

hex-literal = "0.2.1"
image = "0.23.4"
rand = "0.7.3"